--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.CartActivity"/>
+        <activity android:name=".view.FreeActivity"/>
+        <activity android:name=".view.HomeActivity"/>
+        <activity android:name=".view.MeActivity"/>
+        <activity android:name=".view.ProductDetailsActivity"/>
+        <activity android:name=".view.SplashActivity"/>
     </application>
 
 </manifest>
